[gd_scene load_steps=13 format=3 uid="uid://c3yw75ot8ikeq"]

[ext_resource type="Script" path="res://enemies/goomba/goomba.gd" id="1_1eifw"]
[ext_resource type="Texture2D" uid="uid://ciwc1oetyp5qf" path="res://enemies/goomba/goomba.png" id="1_phhbn"]
[ext_resource type="Texture2D" uid="uid://cnlaiypcub0h0" path="res://enemies/100.png" id="3_3t5wx"]
[ext_resource type="AudioStream" uid="uid://bk4kvec7480fl" path="res://enemies/smw_stomp_no_damage.wav" id="4_tycly"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mlc80"]
size = Vector2(12, 2.5)

[sub_resource type="Animation" id="Animation_b1lv6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_smpnh"]
resource_name = "dead"
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_25x8a"]
resource_name = "walk"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nwm4d"]
_data = {
"RESET": SubResource("Animation_b1lv6"),
"dead": SubResource("Animation_smpnh"),
"walk": SubResource("Animation_25x8a")
}

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_umkwk"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("Sprite2D:flip_h")
properties/1/spawn = true
properties/1/replication_mode = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y11ms"]
size = Vector2(16, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_byuid"]
size = Vector2(16, 13)

[node name="Node2D" type="CharacterBody2D"]
script = ExtResource("1_1eifw")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_phhbn")
hframes = 2
vframes = 3

[node name="head" type="Area2D" parent="." groups=["head"]]
position = Vector2(0, -1)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="head"]
position = Vector2(0, -3.75)
shape = SubResource("RectangleShape2D_mlc80")

[node name="far left" type="RayCast2D" parent="."]
target_position = Vector2(-68, 0)
collision_mask = 2

[node name="wall left" type="RayCast2D" parent="."]
target_position = Vector2(-16, 0)

[node name="wall right" type="RayCast2D" parent="."]
target_position = Vector2(17, 0)

[node name="far right" type="RayCast2D" parent="."]
target_position = Vector2(72, 0)
collision_mask = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nwm4d")
}

[node name="dead timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Timer" type="Timer" parent="."]
wait_time = 1.7
one_shot = true

[node name="100" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -3)
texture = ExtResource("3_3t5wx")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_tycly")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_umkwk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["enemy"]]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_y11ms")

[node name="Area2D2" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2" groups=["enemy"]]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_byuid")

[connection signal="body_entered" from="head" to="." method="on_hit"]
[connection signal="timeout" from="dead timer" to="." method="delte"]
[connection signal="timeout" from="dead timer" to="." method="delete"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
